--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body style="-webkit-app-region: drag">
     <div id="root"></div>
-    <script src="http://localhost:8080/dist/main.js"></script>
+    <script src='http://localhost:8080/dist/main.js'></script>
   </body>
 </html>
