--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Shopping List</title>
+    <title>Alex-and-Ophe</title>
   </head>
   <body style="-webkit-app-region: drag">
     <div id="root"></div>
